--- a/index.html
+++ b/index.html
@@ -19,30 +19,17 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <p>Tasmania (/tæzˈmeɪniə/;[11] abbreviated as Tas and known colloquially as "Tassie") is an island state that is part of the Commonwealth of Australia. It is located 240 km (150 mi) to the south of the Australian mainland, separated by Bass Strait. The state includes the main island of Tasmania, the 26th-largest island in the world, and the surrounding 334 islands.[12] The state has a population of 507,626 (as of June 2010), almost half of which resides in the Greater Hobart precinct, which forms the metropolitan area of the state capital and largest city, Hobart.</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Tasmania's area is 68,401 km2 (26,410 sq mi), of which the main island covers 64,519 km2 (24,911 sq mi).[13] Tasmania is promoted as a natural state; almost 45% of Tasmania lies in reserves, national parks, and World Heritage Sites[14] and the state was the founding place of the first environmental party in the world.[15]</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>The northernmost terrestrial point of the state of Tasmania is Boundary Islet, a nature reserve in Bass Strait, which due to a mapping error, is shared with the state of Victoria. The subantarctic Macquarie Island and its surrounding islands are also under the administration of Tasmania as a nature reserve and part of the Huon Valley Council local government area. The Bishop and Clerk Islets, about 37 km south of Macquarie Island, are the southernmost terrestrial point of the state of Tasmania, and the southernmost internationally recognised land in Australia.</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>The land is believed to have been occupied by Aboriginals for 40,000 years before English colonisation. It is thought Tasmanian Aboriginals were separated from mainland Aboriginal groups about 10,000 years ago when the sea rose to form Bass Strait.[16]</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>The penal settlement of Van Diemen's Land (named by explorer Abel Tasman in honour of Dutch colonial governor Anthony van Diemen) was founded in 1803 by the British Empire to forestall any claims to the land by French explorers during the Napoleonic Wars. In 1856, it became a self-governing colony and renamed Tasmania, and in 1901, it became part of the Federation of Australia. About 65,000 convicts were sent to Van Diemen's Land before transportation ceased in 1853.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>The Aboriginal population was estimated to have been between 3000 and 7000 at the time of colonisation, but was almost wiped out within 30 years by a combination of violent guerrilla conflict with settlers known as the "Black War", intertribal conflict, and from the late 1820s, the spread of infectious diseases to which they had no immunity. The conflict, which peaked between 1825 and 1831 and led to more than three years of martial law, cost the lives of almost 1100 Aboriginals and settlers. The near-destruction of Tasmania's Aboriginal population has been described by some historians as an act of genocide by the British.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/mailporus2/country">Country</a> is maintained by <a href="https://github.com/mailporus2">mailporus2</a>.</span>
